Criado rota para buscar e alterar usuário
